--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -23,12 +23,16 @@
 
   <div class="field">
     <%= form.label :image %>
-    <%= form.text_field :image %>
+    <%= form.select :image, [['Log Cabin', 'logcabin'], ['Landscape', 'landscape'],
+                             ['Pool', 'pool'], ['Minimalist', 'minimalist'],
+                             ['Edible garden', 'ediblegarden']] %>
   </div>
 
   <div class="field">
-    <%= form.label :author_id %>
-    <%= form.text_field :author_id %>
+    <%= form.fields_for :tags do |builder| %>
+      <%= builder.label :category %>
+      <%= builder.collection_select :category_id, Category.all, :id, :name %>
+    <% end %>
   </div>
 
   <div class="actions">
