--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= link_to 'Mountain Blog Home', root_path %>
     <div class="menu">
       <% if user_signed_in? %>
-          <%= link_to current_user.name.capitalize(), edit_user_registration_path, :class => 'navbar-link' %> |
+          <%= link_to current_user.name, edit_user_registration_path, :class => 'navbar-link' %> |
           <%= link_to 'New article', new_article_path, :class => 'navbar-link' %>
         </div>
         <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
