--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -14,3 +14,56 @@
     height: 60vh;
   }
 }
+.popular-article {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  background: center/cover no-repeat;
+  font-size: 20px;
+  font-weight: 800;
+  height: 60vh;
+  
+  .popular-title {
+    color: white;
+    text-shadow: 2px 2px black;
+    padding: 10px;
+  }
+  
+  .popular-body {
+    color: mistyrose;
+    text-shadow: 2px 2px black;
+    padding: 10px;
+  }
+}
+.category-container {
+  display: flex;
+  justify-content: space-around;
+  
+  .category-item {
+    position: relative;
+    flex: 1;
+    background: center/cover no-repeat;
+    height: 30vh;
+  }
+
+  .lower-link {
+    position: absolute;
+    padding: 5px;
+    left: 10px;
+  }
+
+  .category-link {
+    top: 10px;
+    background-color: rgba(95, 25, 93, 0.5);
+  }
+
+  .article-link {
+    bottom: 10px;
+    background-color: rgba(18, 37, 13, 0.4);
+  }
+  a {
+    color : white;
+    font-weight: 800;
+    text-shadow: 2px 2px black;
+  }
+}
