--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,10 @@
 
   <body>
     <nav class="nav">
-    <%= link_to 'Mountain Blog Home', root_path %>
+    <%#= link_to 'Mountain Blog Home', root_path %>
+    <%= link_to root_path do%>
+      <%= image_tag "mountainlogo" %>
+    <% end %>
     <div class="menu">
       <% if user_signed_in? %>
           <%= link_to current_user.name, edit_user_registration_path, :class => 'navbar-link' %> |
