--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -21,13 +21,16 @@
   background: center/cover no-repeat;
   font-size: 20px;
   font-weight: 800;
-  height: 58vh;
+  height: 57vh;
   
   .popular-title {
     font-size: x-large;
-    color: #FD6000;
     text-shadow: 2px 2px black;
     padding: 10px;
+
+    a {
+      color: #FD6000;
+    }
   }
   
   .popular-body {
@@ -44,7 +47,7 @@
     position: relative;
     flex: 1;
     background: center/cover no-repeat;
-    height: 32vh;
+    height: 32.5vh;
   }
 
   .lower-link {
