Add votes to the articles

--- a/app/views/categories/_card-a.html.erb
+++ b/app/views/categories/_card-a.html.erb
@@ -1,6 +1,7 @@
 <div class="article-item article-text">
   <b><%= article.title %></b><br>
   <%= article.body %>
+  <%= link_to 'Vote', article_votes_path(article_id: article.id), method: :post %>
 </div>
 
 <div class="article-item article-image">
