--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -16,18 +16,56 @@
     .single-article{
       display: flex;
       width: 50vw;
+      height: 40vh;
 
       .article-item {
-        flex: 1
+        flex: 1;
       }
 
       .article-text {
-        margin: 5px;
+        background-color: white;
+        position: relative;
         text-align: justify;
+
+        .text-item {
+          position: absolute;
+          left: 10px;
+          right: 10px;
+        }
+
+        .category-name-box {
+          display: inline-block;
+          top: 12px; 
+          color: #fd6000;
+          border-bottom: 3px solid #fd6000;
+          right: auto;
+        }
+
+        .article-title-box {
+          display: inline-block;
+          top: 45px; 
+          font-weight: 800;
+        }
+
+        .body-box {
+          top: 65px; 
+        }
+
+        .read-more-box {
+          bottom: 10px;
+          
+          a {
+            color: #fd6000;
+          }
+          
+        }
+
       }
 
-      .article-item-image {
+      .article-image {
         width: 25vw;
+        background-size: cover;
+        overflow: hidden;
       }
     }
   }
