--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,5 +1,6 @@
 
 $primary-color: #FD6000;
+$primary-color-dark: #993d00;
 $primary-color-light: #888;
 $primary-color-text: #212121;
 $color-link: #555;
@@ -21,10 +22,10 @@ $divider-color: #bdbdbd;
 }
 
 body {
-  background: #ffffff;
+  background: white;
   position: relative;
-  
   font-family: Lato;
+  overflow: hidden;
 }
 
 h1,
@@ -39,7 +40,6 @@ ul {
 
 a {
   text-decoration: none;
-  color: purple;
 }
 
 .nav {
@@ -47,6 +47,7 @@ a {
   justify-content: space-between;
   align-items: center;
   padding: 1vh 2vw;
+  background-color: white;
   color: $primary-color-light;
   border-bottom: thick solid $primary-color-light;
 
@@ -81,7 +82,6 @@ a {
 
 .notice,
 .alert {
-  margin-bottom: 8px;
   width: 100%;
   height: 30px;
   text-align: center;
@@ -91,7 +91,7 @@ a {
 }
 
 .notice {
-  background-color: #d4f6c6;
+  background-color: #ff7e4b;
 }
 
 .alert {
@@ -101,4 +101,95 @@ a {
 .errors {
   font-size: 10px;
   color: red;
+}
+
+.auth-container{
+  position: relative;
+  background-color: gray;
+  height: 90vh;
+
+  .form-container {
+    position: relative;
+    top: 50px;  
+    width: 30vw;
+    background-color: white;
+    margin: auto;
+    border-radius: 10px;
+    border: 1px solid #fd6000;
+  
+    .form-title {
+      position: relative;
+      text-align: center;
+      background-color: #fd6000;
+      padding: 10px;
+      margin: auto;
+    }
+
+    .form-links {
+      text-align: center;
+      margin: 10px 0;
+    }
+  }
+}
+
+
+form {
+  width: 90%;
+  margin: auto;
+
+  .field {
+    width: 100%;
+    padding: 8px 0px;
+    label {
+      margin-bottom: 8px;
+    }
+
+    input, textarea {
+      width: 100%;
+      border: 1px solid $divider-color;
+      border-radius: 4px;
+      padding: 8px;
+    }
+
+    input[type="checkbox"] {
+      width: fit-content;
+    }
+  }
+
+  .actions {
+    display: flex;
+    justify-content: center;
+    margin: 8px 0;
+  }
+  input[type="submit"] {
+    padding: 8px;
+    width:100%;
+    border: none;
+    border-radius: 4px;
+    background-color: $primary-color-dark;
+    color: $primary-color-light;
+    text-transform: uppercase;
+    font-weight: 900;
+  }
+
+  input[type="submit"]:hover {
+    background-color: $primary-color;
+    color: #fff;
+  }
+
+  .actions.reset {
+    input[type="submit"] {
+      width: 100%;
+    }
+  }
+
+  #error_explanation {
+    h2 {
+      color: $primary-color-text;
+      font-size: 1em;
+    }
+    ul {
+      color: #f00;
+    }
+  }
 }
