--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,20 +1,18 @@
 <main class="article-container">
-<h1 class="article-title" >
-  <%= @article.title %>
-</h1>
-
-<p>
-  <span class="article-subtitle">
-    <%= @article.author.name %> - <%= @article.created_at.strftime("%B %-d, %Y")%>
-  </span>
-</p>
-
-<img class="article-image" src="<%= image_path @article.image %>" alt="article image" >
-
-<p>
-  <%= @article.body %>
-</p>
-
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
+  <div class="text-content">
+    <h1 class="article-title" >
+      <%= @article.title %>
+    </h1>
+    <article class= "body-content">
+      <%= @article.body %>
+    </article>
+    <span class="article-info">
+      <%= @article.author.name %> - <%= @article.created_at.strftime("%B %-d, %Y")%>
+    </span>
+    <%= link_to 'Edit', edit_article_path(@article) %> Vote this article
+    <%= link_to 'Vote', article_votes_path(@article), method: :post %>
+  </div>
+  <div class="image-content">
+    <img class="article-image" src="<%= image_path @article.image %>" alt="article image" >
+  </div>
 </main>
