--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,15 +1,11 @@
 <main class="category-main-container">
-  <h1 class="category-title" >
-    <%= @category.name %>
-  </h1>
-
   <div class="articles-container">
   <% @category.articles.each_with_index do |article, index|%>
     <div class="single-article">
       <% if left_image?(index) %>
-        <%= render 'card-a', article: article %>
+        <%= render 'card-b', article: article, category: @category%>
       <% else %>
-        <%= render 'card-b', article: article %>
+        <%= render 'card-a', article: article, category: @category%>
       <% end %>
     </div>
   <% end %>
