Add the delete vote option, as well as the edit article link only for the article owner

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -1,6 +1,10 @@
 // Place all the styles related to the Articles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.article-form-title, .lower-links{
+  text-align: center;
+  margin: 20px;
+}
 .article-container {
   position: relative;
   display: flex;
