--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -116,6 +116,7 @@ a {
     margin: auto;
     border-radius: 10px;
     border: 1px solid #fd6000;
+    box-shadow: 8px 8px #444;
   
     .form-title {
       position: relative;
