--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,8 +9,14 @@
     <span class="article-info">
       <%= @article.author.name %> - <%= @article.created_at.strftime("%B %-d, %Y")%>
     </span>
-    <%= link_to 'Edit', edit_article_path(@article) %> Vote this article
-    <%= link_to 'Vote', article_votes_path(@article), method: :post %>
+    <% if owner?(@article.author_id)%>
+      <%= link_to 'Edit', edit_article_path(@article) %> 
+    <% end %>
+    <% if @vote.nil? %>
+      <%= link_to 'Vote this article', article_votes_path( @article ), method: :post %>
+    <% else %>
+      <%= link_to 'Delete your vote', article_vote_path( id: @vote.id, article_id: @article.id  ), method: :delete %>
+    <% end %>
   </div>
   <div class="image-content">
     <img class="article-image" src="<%= image_path @article.image %>" alt="article image" >
