--- a/app/views/categories/_card-a.html.erb
+++ b/app/views/categories/_card-a.html.erb
@@ -6,7 +6,7 @@
     <%= article.title %>
   </title>
   <div class="body-box text-item">
-    <%= article.body %>
+    <%= article.body.truncate(330, separator: ' ') %>
   </div>
   <div class="read-more-box text-item">
     <%= link_to 'Read More', "/articles/#{article.id}" %>
