--- a/app/views/categories/_card-b.html.erb
+++ b/app/views/categories/_card-b.html.erb
@@ -9,7 +9,7 @@
     <%= article.title %>
   </title>
   <div class="body-box text-item">
-    <%= article.body %>
+    <%= article.body.truncate(300, separator: ' ') %>
   </div>
   <div class="read-more-box text-item">
     <%= link_to 'Read More', "/articles/#{article.id}" %>
