--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,6 +1,6 @@
 <main class="category-main-container">
   <div class="articles-container">
-  <% @category.articles.each_with_index do |article, index|%>
+  <% @category.articles.order(created_at: :desc).each_with_index do |article, index|%>
     <div class="single-article">
       <% if left_image?(index) %>
         <%= render 'card-b', article: article, category: @category%>
@@ -10,5 +10,7 @@
     </div>
   <% end %>
   </div>
-
 </main>
+<footer class="footer-container">
+  <%= render 'footer'%>
+</footer>
