--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,14 +3,14 @@
     <h1 class="article-title" >
       <%= @article.title %>
     </h1>
-    <article class= "body-content">
-      <%= @article.body %>
-    </article>
     <span class="article-info">
       <%= @article.author.name %> - <%= @article.created_at.strftime("%B %-d, %Y")%>
     </span>
+    <article class= "body-content">
+      <%= @article.body %>
+    </article>
     <% if owner?(@article.author_id)%>
-      <%= link_to 'Edit', edit_article_path(@article) %> 
+      <%= link_to 'Edit', edit_article_path(@article) %> |
     <% end %>
     <% if @vote.nil? %>
       <%= link_to 'Vote this article', article_votes_path( @article ), method: :post %>
