Add footer to the articles show page

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -22,3 +22,6 @@
     <img class="article-image" src="<%= image_path @article.image %>" alt="article image" >
   </div>
 </main>
+<footer class="footer-container">
+  <%= render :partial => 'categories/footer' %>
+</footer>
