--- a/app/views/categories/_footer.html.erb
+++ b/app/views/categories/_footer.html.erb
@@ -12,9 +12,14 @@
 </div>
 
 <div class="social-contact">
-<span>Connect with us: </span>
-<div class="twitter">
-  <i class="fa fa-twitter-square" aria-hidden="true">
-  </i>
-</div>
+  <span class = "connect">Connect with us: </span>
+  <div class="icons">
+    <i class="fa fa-twitter" aria-hidden="true"></i>
+  </div>
+  <div class="icons">
+    <i class="fa fa-instagram" aria-hidden="true"></i>
+  </div>
+  <div class="icons">
+    <i class="fa fa-facebook" aria-hidden="true"></i>
+  </div>
 </div>
