--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -93,6 +93,24 @@
     }
   }
 
+  .social-contact {
+    display: flex;
+    align-items: center;
+
+    .connect { margin-right: 5px }
+    
+    .icons{
+      font-size: 20px;
+      color: #4e443e;
+      background-color: #fd6000;
+      text-align: center;
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      margin: 0 5px;
+    }
+  }
+
 
   a {
     color: #fd6000;
