--- a/app/views/categories/_footer.html.erb
+++ b/app/views/categories/_footer.html.erb
@@ -14,12 +14,18 @@
 <div class="social-contact">
   <span class = "connect">Connect with us: </span>
   <div class="icons">
-    <i class="fa fa-twitter" aria-hidden="true"></i>
+    <a href="#">
+      <i class="fa fa-twitter" aria-hidden="true"></i>
+    </a>
   </div>
   <div class="icons">
-    <i class="fa fa-instagram" aria-hidden="true"></i>
+    <a href="#">
+      <i class="fa fa-instagram" aria-hidden="true"></i>
+    </a>
   </div>
   <div class="icons">
-    <i class="fa fa-facebook" aria-hidden="true"></i>
+    <a href="#">
+      <i class="fa fa-facebook" aria-hidden="true"></i>
+    </a>
   </div>
 </div>
