--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,9 @@
         <div class="menu-item">
           <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
         </div>
-        <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+        <div class="menu-item">
+          <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+        </div>
       <% end %>
     </div>
   </nav>
