Remove /public/assets from the .gitignore file

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -25,7 +25,7 @@
     <%= form.label :image %>
     <%= form.select :image, [['Log Cabin', 'logcabin'], ['Landscape', 'landscape'],
                              ['Pool', 'pool'], ['Minimalist', 'minimalist'],
-                             ['Edible garden', 'ediblegarden']] %>
+                             ['Edible garden', 'ediblegarden'], ['Mountain','mountain']] %>
   </div>
 
   <div class="field">
